--- a/style.css
+++ b/style.css
@@ -3,13 +3,13 @@ html * {
   -webkit-transition: 0.3s ease-in-out;
   transition: 0.3s ease-in-out; }
 
-.swipe {
+.animation-swipe {
   display: block;
   position: relative;
   overflow: hidden;
   cursor: pointer;
   color: #84af1b; }
-  .swipe:before {
+  .animation-swipe:before {
     box-sizing: border-box;
     -webkit-transition: 0.3s ease-in-out;
     transition: 0.3s ease-in-out;
@@ -22,12 +22,12 @@ html * {
     border-bottom: 2.5rem solid #84af1b;
     -webkit-transform: translateX(100%);
     transform: translateX(100%); }
-  .swipe:hover:before {
+  .animation-swipe:hover:before {
     -webkit-transform: translateX(0);
     transform: translateX(0); }
-  .swipe.true {
+  .animation-swipe.favorite {
     color: yellow !important; }
-    .swipe.true:before {
+    .animation-swipe.favorite:before {
       -webkit-transform: translateX(0);
       transform: translateX(0); }
 
@@ -35,10 +35,14 @@ body {
   background: #eeeeee; }
 
 nav {
-  width: 80%;
   margin: 30px 0;
   color: #939393;
   font-size: 2rem; }
+  nav h1 {
+    font-size: 1em;
+    margin: 0; }
+  nav .pull-right {
+    letter-spacing: .2em; }
 
 .items {
   margin: 0 -20px;
