--- a/style.scss
+++ b/style.scss
@@ -14,7 +14,7 @@ html * {
 }
 
 
-.swipe {
+.animation-swipe {
 
   display: block;
   position: relative;
@@ -49,7 +49,7 @@ html * {
     }
   }
 
-  &.true {
+  &.favorite {
       color: yellow !important;
       &:before {
           -webkit-transform: translateX(0);
@@ -70,10 +70,19 @@ body {
 }
 
 nav {
-  width: 80%;
+  // width: 80%;
   margin: 30px 0;
   color: rgb(147, 147, 147);
   font-size: 2rem;
+
+  h1 {
+      font-size : 1em ;
+      margin : 0 ;
+  }
+
+  .pull-right {
+      letter-spacing: .2em;
+  }
 }
 
 .items {
